[package]
name = "spew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0", features = ["small_rng"]}
log = "0"
simple_logger = "4"
clap = { version = "4.3.2", features = ["derive"] }
nix = "0"